grammar.js
    stylesheet: $ => seq(
      repeat(choice(
        $._root_statement_with_sep,
        $._newline,
      )),
      optional($._root_statement),
    ),

    _root_statement_with_sep: $ => choice(
      $._root_block_statement,
      seq($._root_line_statement, $._newline),
    ),

    _block_statement_with_sep: $ => choice(
      $._block_block_statement,
      seq($._block_line_statement, $._newline),
    ),

    _root_statement: $ => choice(
      $._root_block_statement,
      $._root_line_statement,
    ),

    _block_statement: $ => choice(
      $._block_block_statement,
      $._block_line_statement,
    ),

    block: $ => seq(
      $._indent,
      repeat(choice(
        $._block_statement_with_sep,
        $._newline,
      )),
      optional($._block_statement),
      $._dedent,
    ),

    declaration: $ => prec.dynamic(5, prec.right(choice(
      declarationRule($, $.interpolated_property_name),
      declarationRule($, alias($.identifier, $.property_name)),
      declarationRule($, alias($.custom_property_name, $.property_name)),
      declarationRule($, alias($.nested_property_name, $.property_name), false),
    ))),

    rule_set: $ => ruleSet($, $.selector_list),

    selector_list: $ => sep1($.selector, $._selector_separator),
    nested_selector_list: $ => sep1($.nested_selector, $._selector_separator),

    _selector_separator: $ => choice(
      seq(',', repeat($._newline)),
      repeat1($._newline),
    ),

    selector: $ => selectorSequence($),

    nested_selector: $ => prec.dynamic(2, selectorSequence($)),

    class_name: $ => token(seq('.', /-?[_a-zA-Z][\w-]*/)),
    expression: $ => choice(
      $.ternary_expression,
      $.binary_expression,
      $.defined_expression,
      $.media_prefix_expression,
      $.unary_expression,
      $.not_expression,
      $.css_function_expression,
      $.call_expression,
      $.feature_query,
      $.object_value,
      $.block_literal,
      $.cast_expression,
      $.interpolation,
      $._value,
    ),

    _value: $ => choice(
      $.number_value,
      $.boolean_value,
      $.null_value,
      $.string_value,
      $.color_value,
      $.member_expression,
      $.variable_name,
      $.property_lookup,
      $.important_modifier,
      $.parenthesized_expression,
    ),

    number_value: $ => prec.right(choice(
      seq(
        choice($.float_value, $.integer_value),
        alias(token.immediate('%'), $.unit),
      ),
      seq(
        choice($.float_value, $.integer_value),
        optional(choice(
          $.unit,
          alias($.known_unit, $.unit),
        )),
      ),
    )),

    integer_value: $ => /\d+/,
    unit: $ => token.immediate(/[a-zA-Z]+/),
    variable_name: $ => choice(
      $._identifier,
      $.dollar_identifier,
    ),
    _identifier: $ => choice($.identifier, alias($.nested_property_name, $.identifier)),

    identifier: $ => /-?[_a-zA-Z][\w-]*/,
